Create Some Custom REST APIs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=securityTutorial
+spring.application.name=${SPRING_APP_NAME:securityTutorial}
+logging.pattern.console = ${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
+
+spring.main.banner-mode=off
+spring.security.user.name=youness
+spring.security.user.password=youness
+logging.level.org.springframework.security=trace
