create the security filter chain

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ logging.pattern.console = ${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-
 spring.main.banner-mode=off
 spring.security.user.name=youness
 spring.security.user.password=youness
-logging.level.org.springframework.security=trace
+logging.level.org.springframework.security=warn
