--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,9 @@ logging.pattern.console = ${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-
 
 spring.main.banner-mode=off
 logging.level.org.springframework.security=warn
+
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_security
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+spring.jpa.show-sql=${JPA_SHOW_SQL:true}
+spring.jpa.properties.hibernate.format_sql=${HIBERNATE_FORMAT_SQL:true}
