--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 spring.jpa.show-sql=${JPA_SHOW_SQL:true}
 spring.jpa.properties.hibernate.format_sql=${HIBERNATE_FORMAT_SQL:true}
+spring.jpa.hibernate.ddl-auto=update
