--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=${SPRING_APP_NAME:securityTutorial}
-logging.pattern.console = ${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
-
 spring.main.banner-mode=off
-logging.level.org.springframework.security=warn
+logging.level.root=warn
+
+# logging.level.org.springframework.security=warn
 
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_security
 spring.datasource.username=springstudent
