configure Spring Security Profiles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,12 @@ spring.datasource.password=springstudent
 spring.jpa.show-sql=${JPA_SHOW_SQL:true}
 spring.jpa.properties.hibernate.format_sql=${HIBERNATE_FORMAT_SQL:true}
 spring.jpa.hibernate.ddl-auto=update
+
+
+# to tell spring boot which properties file to consider
+
+spring.config.import=application_prod.properties
+
+# to activate a specific profile (either default or prod or any other profile)
+
+spring.profiles.active=prod
