Almost Customize Spring Security for Most UserCases

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,9 @@ spring.config.import=application_prod.properties
 
 # to activate a specific profile (either default or prod or any other profile)
 
-spring.profiles.active=prod
+spring.profiles.active=default
+
+#Customize Session Timeout
+#after passive time from the end user, he's gonna be directed to login page after completion of session time!
+
+server.servlet.session.timeout=20m
