--- a/src/main/resources/application_prod.properties
+++ b/src/main/resources/application_prod.properties
@@ -13,3 +13,8 @@ spring.datasource.password=springstudent
 spring.jpa.show-sql=${JPA_SHOW_SQL:false}
 spring.jpa.properties.hibernate.format_sql=${HIBERNATE_FORMAT_SQL:false}
 spring.jpa.hibernate.ddl-auto=update
+
+
+#Customize Session Timeout
+# after passive time from the end user, he's gonna be directed to login page after completion of session time!
+server.servlet.session.timeout=10m
